--- a/index.html
+++ b/index.html
@@ -15,17 +15,33 @@ body {
     color: white;
     background: rgb(13, 46, 7);
 }
-    
+
 .glow {
   text-shadow: 0 0 20px #fff, 0 0 30px rgb(14, 165, 14), 0 0 40px rgb(14, 165, 14), 0 0 50px rgb(14, 165, 14), 0 0 60px rgb(14, 165, 14), 0 0 70px rgb(14, 165, 14), 0 0 80px rgb(14, 165, 14);
 }
+
+.display {
+    text-align:center;
+    position:absolute;
+    left:50%;
+    top:50%;
+    font-family:d7;
+    font-size:14vw;
+    transform: translate(-50%,-50%);
+}
+
 </style>
 
 </head>
 <body>
-        <div class="glow" style="text-align:center;position:absolute;left:50%;top:50%;font-family:d7;font-size:16vw;transform: translate(-50%,-50%);">
-            2021<br>
-            <span id="cnt" style="white-space: nowrap;">88 88 88</span>
+    <div class="display" style="z-index: 1; color: rgba(0,100,0,0.2);">
+        888888<br>
+        <span style="white-space: nowrap;">8888888888</span>
+    </div>
+
+        <div class="glow display" style="z-index: 2;">
+            -2021-<br>
+            <span id="cnt" style="white-space: nowrap;">88 88 88 88</span>
         </div>
 
 <script>
@@ -38,9 +54,9 @@ body {
         var h = d2(23-t.getHours())
         var m = d2(59-t.getMinutes())
         var s = d2(59-t.getSeconds())
-
-        document.getElementById('cnt').innerHTML = `${h} ${m} ${s}`
-    }, 100)
+        var ms = 9 - Math.floor((t.getMilliseconds()/100))
+        document.getElementById('cnt').innerHTML = `${h} ${m} ${s} ${ms}`
+    }, 20)
 
 </script>
 
