--- a/index.html
+++ b/index.html
@@ -35,12 +35,12 @@ body {
 </head>
 <body>
     <div class="display" style="z-index: 1; color: rgba(0,100,0,0.2);">
-        888888<br>
-        <span style="white-space: nowrap;">8888888</span>
+        88888888<br>
+        <span style="white-space: nowrap;">888888</span>
     </div>
 
         <div class="glow display" style="z-index: 2;">
-            -2021-<br>
+            - 2021 -<br>
             <span id="cnt" style="white-space: nowrap;">88 88 88</span>
         </div>
 
